crates/rtd-package-resolver/src/snapshots/rtd_package_resolver__tests__relinking_layout.snap
---
source: crates/rtd-package-resolver/src/lib.rs
expression: "fmt(struct_layout, enum_layout)"
---
struct:
struct 0xc0::m::T0 {
    t: struct 0xa0::n::T0 {
        t: struct 0xa0::m::T1<u16, u32> {
            a: address,
            p: u16,
            q: vector<u32>,
        },
        u: struct 0xa0::m::T2 {
            x: u8,
        },
    },
    u: struct 0xa1::n::T1 {
        t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
            a: address,
            p: struct 0xa1::m::T3 {
                y: u16,
            },
            q: vector<u32>,
        },
        u: struct 0xa1::m::T4 {
            z: u32,
        },
    },
    v: struct 0xa0::m::T2 {
        x: u8,
    },
    w: struct 0xa1::m::T3 {
        y: u16,
    },
    x: struct 0xb0::m::T0 {
        m: struct 0xa0::m::T2 {
            x: u8,
        },
        n: struct 0xa0::n::T0 {
            t: struct 0xa0::m::T1<u16, u32> {
                a: address,
                p: u16,
                q: vector<u32>,
            },
            u: struct 0xa0::m::T2 {
                x: u8,
            },
        },
    },
}

enum:
enum 0xc0::m::E0 {
    EnumsAndStructs {
        t: struct 0xa0::n::T0 {
            t: struct 0xa0::m::T1<u16, u32> {
                a: address,
                p: u16,
                q: vector<u32>,
            },
            u: struct 0xa0::m::T2 {
                x: u8,
            },
        },
        u: struct 0xa1::n::T1 {
            t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
                a: address,
                p: struct 0xa1::m::T3 {
                    y: u16,
                },
                q: vector<u32>,
            },
            u: struct 0xa1::m::T4 {
                z: u32,
            },
        },
        v: struct 0xa0::m::T2 {
            x: u8,
        },
        w: struct 0xa1::m::T3 {
            y: u16,
        },
        x: struct 0xb0::m::T0 {
            m: struct 0xa0::m::T2 {
                x: u8,
            },
            n: struct 0xa0::n::T0 {
                t: struct 0xa0::m::T1<u16, u32> {
                    a: address,
                    p: u16,
                    q: vector<u32>,
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
            },
        },
        et: enum 0xa0::n::E0 {
            V0 {
                t: enum 0xa0::m::E1<u16, u32> {
                    V {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
                l: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
            },
        },
        eu: enum 0xa1::n::E1 {
            V0 {
                t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
                    a: address,
                    p: struct 0xa1::m::T3 {
                        y: u16,
                    },
                    q: vector<u32>,
                },
                u: struct 0xa1::m::T4 {
                    z: u32,
                },
                et: enum 0xa0::m::E1<0xa1::m::E3, u32> {
                    V {
                        a: address,
                        p: enum 0xa1::m::E3 {
                            V0 {
                                y: u16,
                            },
                        },
                        q: vector<u32>,
                    },
                },
                eu: enum 0xa1::m::E4 {
                    V0 {
                        z: u32,
                    },
                },
            },
        },
        ev: enum 0xa0::m::E2 {
            V0 {
                x: u8,
            },
        },
        ew: enum 0xa1::m::E3 {
            V0 {
                y: u16,
            },
        },
        ex: enum 0xb0::m::E0 {
            V0 {
                m: struct 0xa0::m::T2 {
                    x: u8,
                },
                n: struct 0xa0::n::T0 {
                    t: struct 0xa0::m::T1<u16, u32> {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                    u: struct 0xa0::m::T2 {
                        x: u8,
                    },
                },
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
            V1 {
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
            V2 {
                m: struct 0xa0::m::T2 {
                    x: u8,
                },
                n: struct 0xa0::n::T0 {
                    t: struct 0xa0::m::T1<u16, u32> {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                    u: struct 0xa0::m::T2 {
                        x: u8,
                    },
                },
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
        },
    },
    EnumsOnly {
        et: enum 0xa0::n::E0 {
            V0 {
                t: enum 0xa0::m::E1<u16, u32> {
                    V {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
                l: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
            },
        },
        eu: enum 0xa1::n::E1 {
            V0 {
                t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
                    a: address,
                    p: struct 0xa1::m::T3 {
                        y: u16,
                    },
                    q: vector<u32>,
                },
                u: struct 0xa1::m::T4 {
                    z: u32,
                },
                et: enum 0xa0::m::E1<0xa1::m::E3, u32> {
                    V {
                        a: address,
                        p: enum 0xa1::m::E3 {
                            V0 {
                                y: u16,
                            },
                        },
                        q: vector<u32>,
                    },
                },
                eu: enum 0xa1::m::E4 {
                    V0 {
                        z: u32,
                    },
                },
            },
        },
        ev: enum 0xa0::m::E2 {
            V0 {
                x: u8,
            },
        },
        ew: enum 0xa1::m::E3 {
            V0 {
                y: u16,
            },
        },
        ex: enum 0xb0::m::E0 {
            V0 {
                m: struct 0xa0::m::T2 {
                    x: u8,
                },
                n: struct 0xa0::n::T0 {
                    t: struct 0xa0::m::T1<u16, u32> {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                    u: struct 0xa0::m::T2 {
                        x: u8,
                    },
                },
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
            V1 {
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
            V2 {
                m: struct 0xa0::m::T2 {
                    x: u8,
                },
                n: struct 0xa0::n::T0 {
                    t: struct 0xa0::m::T1<u16, u32> {
                        a: address,
                        p: u16,
                        q: vector<u32>,
                    },
                    u: struct 0xa0::m::T2 {
                        x: u8,
                    },
                },
                em: enum 0xa0::m::E2 {
                    V0 {
                        x: u8,
                    },
                },
                en: enum 0xa0::n::E0 {
                    V0 {
                        t: enum 0xa0::m::E1<u16, u32> {
                            V {
                                a: address,
                                p: u16,
                                q: vector<u32>,
                            },
                        },
                        u: struct 0xa0::m::T2 {
                            x: u8,
                        },
                        l: enum 0xa0::m::E2 {
                            V0 {
                                x: u8,
                            },
                        },
                    },
                },
            },
        },
    },
    StructOnly {
        t: struct 0xa0::n::T0 {
            t: struct 0xa0::m::T1<u16, u32> {
                a: address,
                p: u16,
                q: vector<u32>,
            },
            u: struct 0xa0::m::T2 {
                x: u8,
            },
        },
        u: struct 0xa1::n::T1 {
            t: struct 0xa0::m::T1<0xa1::m::T3, u32> {
                a: address,
                p: struct 0xa1::m::T3 {
                    y: u16,
                },
                q: vector<u32>,
            },
            u: struct 0xa1::m::T4 {
                z: u32,
            },
        },
        v: struct 0xa0::m::T2 {
            x: u8,
        },
        w: struct 0xa1::m::T3 {
            y: u16,
        },
        x: struct 0xb0::m::T0 {
            m: struct 0xa0::m::T2 {
                x: u8,
            },
            n: struct 0xa0::n::T0 {
                t: struct 0xa0::m::T1<u16, u32> {
                    a: address,
                    p: u16,
                    q: vector<u32>,
                },
                u: struct 0xa0::m::T2 {
                    x: u8,
                },
            },
        },
    },
}
