crates/rtd-package-resolver/src/snapshots/rtd_package_resolver__tests__simple_enum_type.snap
---
source: crates/rtd-package-resolver/src/lib.rs
expression: "format!(\"{layout:#}\")"
---
enum 0xa0::m::E0 {
    V {
        b: bool,
        v: vector<enum 0xa0::m::E1<0xa0::m::T1<0xa0::m::T2, u128>, u128> {
            V {
                a: address,
                p: struct 0xa0::m::T1<0xa0::m::T2, u128> {
                    a: address,
                    p: struct 0xa0::m::T2 {
                        x: u8,
                    },
                    q: vector<u128>,
                },
                q: vector<u128>,
            },
        }>,
    },
}
